[package]
name = "pty"
version = "0.1.0"
authors = ["Niklas Claesson <nicke.claesson@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
libc = "0.2"
mio = "0.6"
tokio-core = "0.1"
log = "0.3"

[dev-dependencies]
env_logger = "0.4"

[dependencies.futures-addition]
path = "../futures-addition"
